<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AdobePassDemo</string>

    <!-- service provider URLs -->
    <string name="sp_url_production">sp.auth.adobe.com</string>
    <string name="sp_url_staging">sp.auth-staging.adobe.com</string>
    <string name="sp_url_uat1">sp.auth-uat1.adobe.com</string>
    <string name="sp_url">sp-prequal.auth.adobe.com</string>
    <string name="software_statement">unknown</string>
    <string name="redirect_uri">demoapp.com</string>

    <string name="credential_store_passwd">adobepass</string>
    <string name="separatorInitAndLogout">Initialization and Settings</string>
    <string name="lblRequestorID">Requestor ID:</string>
    <string name="btnSetRequestor">setRequestor</string>
    <string name="btnLogout">logout</string>
    <string name="separatorAuthentication">Authentication and Logout</string>
    <string name="btnCheckAuthentication">checkAuthentication</string>
    <string name="btnGetAuthentication">getAuthentication</string>
    <string name="btnGetAuthenticationWithData">getAuthenticationWithData</string>
    <string name="btnTempPassResetActivity">Reset TP</string>
    <string name="btnReset">Reset</string>
    <string name="btnBackToMainActivity">Cancel</string>
    <string name="separatorAuthorization">Authorization</string>
    <string name="btnCheckAuthorization">checkAuthorization</string>
    <string name="btnCheckAuthorizationWithData">checkAuthorizationWithData</string>
    <string name="btnGetAuthorization">getAuthorization</string>
    <string name="btnPreauthorize">Preauthorize</string>
    <string name="btnAuthorize"></string>
    <string name="btnGetAuthorizationWithData">getAuthorizationWithData</string>
    <string name="btnCheckPreauthorizedResources">checkPreauthorizedResources</string>
    <string name="separatorUserMetadata">User Metadata</string>
    <string name="lblUserMetadataName">Metadata name:</string>
    <string name="btnGetUserMetadata">getUserMetadata</string>
    <string name="btnShowPreferences">Preferences</string>
    <string name="btnStorageViewer">Storage Viewer</string>

    <string name="radio_tpr_release_production">Release production</string>
    <string name="radio_tpr_release_staging">Release staging</string>
    <string name="radio_tpr_prequal_production">Prequal production</string>
    <string name="radio_tpr_prequal_staging">Prequal staging</string>
    <string name="radio_tpr_custom">Custom URL</string>

    <string name="separatorTprEnvironment">Environment</string>
    <string name="separatorTprOAuth2BearerToken">OAuth2 Bearer Token</string>
    <string name="separatorTprMvpdId">Temp Pass ID (MVPD ID)</string>
    <string name="separatorTprGenericKey">Generic Key (optional)</string>
    <string name="separatorTprActions">Actions</string>
    <string name="lblSelectedProviderName">Selected Provider name:</string>
    <string name="separatorSelectedProvider">Selected Provider Settings</string>
    <string name="btnSetSelectedProvider">setSelectedProvider</string>

    <!-- preferences activity -->
    <string name="separatorPrefEnvironment">Environment</string>
    <string name="separatorPrefSigningCredential">Signing credential</string>
    <string name="separatorPrefHttpProtocol">Protocol</string>
    <string name="separatorPrefActions">Actions</string>
    <string name="btnPreferencesOk">OK</string>
    <string name="btnPreferencesCancel">Cancel</string>
    <string name="radioStaging">Staging</string>
    <string name="radioProduction">Production</string>
    <string name="radioSigningCredential1024">1024-bit key</string>
    <string name="radioSigningCredential2048">2048-bit key</string>

    <!-- storage viewer activity -->
    <string name="clear_all_menu">Clear All</string>
    <string name="show_storage1_menu">Show v1</string>
    <string name="clear_storage1_menu">Clear v1</string>
    <string name="show_storage2_menu">Show v2</string>
    <string name="clear_storage2_menu">Clear v2</string>
    <string name="show_storage3_menu">Show v3</string>
    <string name="clear_storage3_menu">Clear v3</string>
    <string name="expand_all_menu">Expand All</string>
    <string name="collapse_all_menu">Collapse All</string>
    <string name="btnResetApp">Reset App</string>

    <!--generic data activity-->
    <string name="genericDataLabel">Generic Data</string>
    <string name="forceAuthnLabel">Force Authn</string>
    <string name="btnGenericDataOk">OK</string>
    <string name="btnGenericDataCancel">Cancel</string>
    <string name="separatorGenericDataEditBoxes">Data</string>
    <string name="separatorGenericDataButtons">Data</string>
    <string name="software_statement_title">Software Statement</string>
    <string name="redirect_url_title">Redirect Url (from strings.xml)</string>
    <string name="continue_button">Continue</string>
    <string name="swstatement_details">AccessEnabler library use software statement to register application in AdobePass</string>
    <string name="PreauthzText">Cache</string>
    <string name="environment_label">Environment</string>
    <string name="production_env_label">Production</string>
    <string name="staging_env_label">Staging</string>
    <string name="sw_hint">http://tve.helpdocsonline.com/android-application-registration</string>
    <string name="device_info_text">Device Info :</string>
    <string name="application_options_text">Application Options</string>
    <string name="applicationprofile">ApplicationProfile</string>
    <string name="set_options">Set Options</string>
    <string name="back">Back</string>
    <string name="visitorid">VisitorID</string>
    <string name="ad_id">ad_id</string>
    <string name="primaryhardwaretype">primaryHardwareType</string>
    <string name="model">model</string>
    <string name="version">version</string>
    <string name="vendor">vendor</string>
    <string name="manufacturer">manufacturer</string>
    <string name="osname">osName</string>
    <string name="osfamily">osFamily</string>
    <string name="osvendor">osVendor</string>
    <string name="osversion">osVersion</string>
    <string name="browsername">browserName</string>
    <string name="browserversion">browserVersion</string>
    <string name="browservendor">browserVendor</string>
    <string name="displaywidth">displayWidth</string>
    <string name="displayheight">displayHeight</string>
    <string name="displayppi">displayPpi</string>
    <string name="diagonalScreenSize">diagonalScreenSize</string>
    <string name="connectiontype">connectionType</string>
    <string name="connectionsecure">connectionSecure</string>
    <string name="connectionport">connectionPort</string>
    <string name="applicationid">applicationId</string>

</resources>
